--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -1,11 +1,13 @@
-<div>
-	<input [(ngModel)]="currentExpense.amount" placeholder="Expense">
-    <input [(ngModel)]="currentExpense.reason" placeholder="Reason">
-	<button (click)="add()">Add</button>
-</div>
+<div class="container">
+ <div class="input-group">
+	<input [(ngModel)]="currentExpense.amount" placeholder="Expense" class="form-control">
+    <input [(ngModel)]="currentExpense.reason" placeholder="Reason" class="form-control">
+	<button (click)="add()" class="btn btn-primary">Add</button>
+  </div>
 <div>
 	<ul>
 		<li *ngFor="let expense of expenses">{{expense.amount | currency:'EUR'}} {{expense.reason}}</li>
         <li *ngIf="currentExpense.amount">{{currentExpense.amount | currency:'EUR'}} {{currentExpense.reason}}</li>
 	</ul>
+</div>
 </div>
