--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -4,10 +4,10 @@
     <input [(ngModel)]="currentExpense.reason" placeholder="Reason" class="form-control">
 	<button (click)="add()" class="btn btn-primary">Add</button>
   </div>
-<div>
-	<ul>
-		<li *ngFor="let expense of expenses">{{expense.amount | money | currency:'EUR'}} {{expense.reason}}</li>
-        <li *ngIf="currentExpense.amount">{{currentExpense.amount | money | currency:'EUR'}} {{currentExpense.reason}}</li>
-	</ul>
+<div class="card" style="width: 18rem;">
+    <ul class="list-group list-group-flush">
+        <li *ngFor="let expense of expenses" class="list-group-item">{{expense.amount | money | currency:'EUR'}} {{expense.reason}}</li>
+        <li *ngIf="currentExpense.amount || currentExpense.reason" class="list-group-item">{{currentExpense.amount | money | currency:'EUR'}} {{currentExpense.reason}}</li>
+    </ul>
 </div>
 </div>
