the total of the listed expenses is now shown, but the console shows a few errors

--- a/src/app/expenses/expenses.component.html
+++ b/src/app/expenses/expenses.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+ <div>
+    Total: {{ calculateTotal() | money | currency:'EUR' }}   
+ </div>
  <div class="input-group">
 	<input [(ngModel)]="currentExpense.amount" placeholder="Expense" class="form-control">
     <input [(ngModel)]="currentExpense.reason" placeholder="Reason" class="form-control">
